Bug 422537 - Volume level OSD and popup of plasma-pa applet show different percentages if "Raise maximum volume" is enabled
Summary: Volume level OSD and popup of plasma-pa applet show different percentages if ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (show other bugs)
Version: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-06 13:30 UTC by Patrick Silva
Modified: 2020-07-01 18:14 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
screenshot (60.40 KB, image/png)
2020-06-06 13:30 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-06-06 13:30:17 UTC
Created attachment 129104 [details]
screenshot

STEPS TO REPRODUCE
1. click on volume icon in system tray
2. enable "Raise maximum volume"
3. while the popup of plasma-pa applet is still open, change the volume level by scrolling on the sound icon in system tray

OBSERVED RESULT
as we can see in the attached screenshot, volume level OSD and popup of plasma-pa applet show different percentages

EXPECTED RESULT
volume level OSD and popup of plasma-pa applet should show the same percentage

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.71.0
Qt Version: 5.14.2
Comment 1 Nate Graham 2020-06-11 04:38:33 UTC
I had a feeling you were going to be the one to report this. :)

I'm not quite sure what to do about it.
Comment 2 Bug Janitor Service 2020-06-23 00:41:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-pa/-/merge_requests/7
Comment 3 Nicolas Fella 2020-07-01 18:14:58 UTC
Git commit 3f2040d4e13381713b94317b017f42b9ab31b8de by Nicolas Fella.
Committed on 23/06/2020 at 00:46.
Pushed by nicolasfella into branch 'master'.

Show correct volume level in OSD when maximum volume is raised

Volumes greater than 100% are not correctly displayed in the OSD. They are capped at 100%. This patch makes use of the new OSD API from https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/112 to pass along the maximum volume information

M  +12   -16   applet/contents/ui/main.qml
M  +4    -0    src/qml/dbus/osdService.xml
M  +2    -2    src/qml/volumeosd.cpp
M  +1    -1    src/qml/volumeosd.h

https://invent.kde.org/plasma/plasma-pa/commit/3f2040d4e13381713b94317b017f42b9ab31b8de