Show correct volume level in OSD when maximum volume is raised

Volumes greater than 100% are not correctly displayed in the OSD. They are capped at 100%. This patch makes use of the new OSD API from https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/112 to pass along the maximum volume information

BUG: 422537